--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,21 +1,19 @@
-# Node.js with React
-# Build a Node.js project that uses React.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
-
 trigger:
 - master
 
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
-
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+jobs:
+- job: VerificarDisponibilidad
+  displayName: 'Verificar Disponibilidad'
+  steps:
+  - script: |
+      response=$(curl -s -o /dev/null -w "%{http_code}" https://sprightly-melomakarona-25c8f2.netlify.app/?classId=293389c3-ba93-45f1-bf08-7ba3268ac2e2&assignmentId=7d410fdf-fbc3-4ac9-8221-41c7f5eb2236&submissionId=d3dc6316-4535-6b9c-02b8-d3b7085864f0)
+      if [ "$response" -eq 200 ]; then
+        echo "La aplicación en Netlify está disponible."
+      else
+        echo "¡Error! La aplicación en Netlify no está disponible. Código de respuesta: $response"
+        exit 1
+      fi
+    displayName: 'Verificar disponibilidad de la aplicación en Netlify'
